# chronos-lens

./: .gitignore  LICENSE  README.md  pyproject.toml  run_embeddings.py  run_extract.py  run_train.py
artifacts/runs/model-64-ep10/: embeddings.npz  model_checkpoint.pt  vocab.json
artifacts/runs/test-64-config/: checkpoint_ep10.pt  checkpoint_ep12.pt  checkpoint_ep5.pt  embeddings_ep10.npz  embeddings_ep12.npz  embeddings_ep5.npz
artifacts/runs/test-64-config/geometry/: pca_projections.npy  umap_embedding.npy
artifacts/runs/test-model/: embeddings.npz  model_checkpoint.pt
configs/: jepa_128-6-8.yaml  jepa_128-6-8_ep100.yaml  jepa_64-2-2.yaml  jepa_64-4-4.yaml  jepa_64-4-4_ep40.yaml  test_64-2-2__50pat.yaml  test_64-2-2_ep12_50pat.yaml  test_model-64-ep10.yaml  test_model-64-ep5-10.yaml
experiments/drift_e64_L4_h8_v001/: config.yaml
experiments/test_01/: config.yaml
notebooks/: geometry.ipynb
scripts/: run_embeddings.py  run_extract.py  run_mimic_extract.py  run_train.py
src/: extract.py  train.py  train_minimal.py
src/analysis/: calc.py  displacement.py  geometry.py  plotting.py
src/config/: io.py
src/mimic/: baseline.py  helper.py  mimic.py  test.py
src/models/: sequential_jepa.py
src/training/: dataset.py  helper.py  optimizers.py  schedulers.py  train.py
src/utils/: io.py
